--- a/style.css
+++ b/style.css
@@ -25,6 +25,29 @@ nav .logo {
   color: #ff3f6c;
 }
 
+.nav-links {
+  display: flex;
+  align-items: center;
+}
+
+.nav-links a {
+  margin-left: 25px;
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.cart-badge {
+  background: #ff3f6c;
+  color: white;
+  font-size: 12px;
+  padding: 2px 7px;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+
 nav a {
   margin-left: 25px;
   text-decoration: none;
